relay-general/src/pii/snapshots/relay_general__pii__convert__tests__stacktrace_paths_not_strippable.snap
---
source: relay-general/src/pii/convert.rs
expression: data
---
{
  "stacktrace": {
    "frames": [
      {
        "filename": "C:\\Windows\\BogusValue\\foo.txt",
        "abs_path": "C:\\Windows\\BogusValue\\foo.txt"
      }
    ]
  }
}
