relay-general/src/pii/snapshots/relay_general__pii__convert__tests__user.snap
---
source: relay-general/src/pii/convert.rs
expression: data
---
{
  "user": {
    "ip_address": "[ip]",
    "username": "[Filtered]",
    "data": {
      "a_password_here": "[Filtered]",
      "apiKey": "[Filtered]",
      "api_key": "[Filtered]",
      "foo": "bar",
      "password": "[Filtered]",
      "the_secret": "[Filtered]"
    }
  },
  "_meta": {
    "user": {
      "data": {
        "a_password_here": {
          "": {
            "rem": [
              [
                "@password:filter",
                "s",
                0,
                10
              ]
            ],
            "len": 5
          }
        },
        "apiKey": {
          "": {
            "rem": [
              [
                "@password:filter",
                "s",
                0,
                10
              ]
            ],
            "len": 10
          }
        },
        "api_key": {
          "": {
            "rem": [
              [
                "@password:filter",
                "s",
                0,
                10
              ]
            ],
            "len": 10
          }
        },
        "password": {
          "": {
            "rem": [
              [
                "@password:filter",
                "s",
                0,
                10
              ]
            ],
            "len": 5
          }
        },
        "the_secret": {
          "": {
            "rem": [
              [
                "@password:filter",
                "s",
                0,
                10
              ]
            ],
            "len": 5
          }
        }
      },
      "ip_address": {
        "": {
          "rem": [
            [
              "@ip:replace",
              "s",
              0,
              4
            ]
          ],
          "len": 13
        }
      },
      "username": {
        "": {
          "rem": [
            [
              "@password:filter",
              "s",
              0,
              10
            ]
          ],
          "len": 6
        }
      }
    }
  }
}
