relay-general/src/pii/snapshots/relay_general__pii__convert__tests__user_ip_stripped.snap
---
source: relay-general/src/pii/convert.rs
expression: data
---
{
  "user": {
    "ip_address": "[ip]",
    "username": "[ip]",
    "data": {
      "a_password_here": "hello",
      "apiKey": "secret_key",
      "api_key": "secret_key",
      "foo": "bar",
      "password": "hello",
      "the_secret": "hello"
    }
  },
  "_meta": {
    "user": {
      "ip_address": {
        "": {
          "rem": [
            [
              "@ip:replace",
              "s",
              0,
              4
            ]
          ],
          "len": 13
        }
      },
      "username": {
        "": {
          "rem": [
            [
              "@ip:replace",
              "s",
              0,
              4
            ]
          ],
          "len": 13
        }
      }
    }
  }
}
